http.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: ramtops
spec:
  type: ClusterIP
  selector:
    app: lancre
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
