fixed-allow-lancre.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-lancre
  namespace: ramtops
spec:
  podSelector:
    matchLabels:
      app: lancre
  ingress:
    - ports:
        - protocol: TCP
          port: 80
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ramtops
  policyTypes:
    - Ingress
